src/objects/JBCXM__Playbook__c.object
<CustomObject>
    <fields>
        <fullName>JBCXM__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__CTAType__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CTAType</label>
        <referenceTo>JBCXM__CTATypes__c</referenceTo>
        <relationshipLabel>Playbooks</relationshipLabel>
        <relationshipName>Playbooks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__Description__c</fullName>
        <label>Description</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__EntityType__c</fullName>
        <defaultValue>&quot;ACCOUNT&quot;</defaultValue>
        <label>EntityType</label>
        <length>12</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__PlayBookType__c</fullName>
        <label>PlayBookType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>Risk</fullName>
                </value>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
                <value>
                    <fullName>All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JBCXM__RelationshipType__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Relationship Type</label>
        <referenceTo>JBCXM__GSRelationshipType__c</referenceTo>
        <relationshipLabel>Playbooks</relationshipLabel>
        <relationshipName>Playbooks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes whether this particular playbook needs to be synced or not.</description>
        <label>Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__Tasks_Count__c</fullName>
        <label>Tasks Count</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JBCXM__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alert</fullName>
                </value>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>All</fullName>
                    <default>true</default>
                    <label>All</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JBCXM__UsedCount__c</fullName>
        <label>Used Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Playbook</label>
    <listViews>
        <fullName>JBCXM__All</fullName>
        <columns>NAME</columns>
        <columns>JBCXM__Type__c</columns>
        <columns>JBCXM__Active__c</columns>
        <columns>JBCXM__UsedCount__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>JBCXM__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Playbook Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Playbooks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>